<resources>
    <string name="app_name">RRSYS</string>
    <string name="title_activity_create_reservation">RRSYS: Create Reservation</string>
    <string name="title_activity_review_reservation">RRSYS: Review Reservation</string>
    <string name="title_activity_update_reservation">RRSYS: Update Reservation</string>
    <string name="title_activity_confirm_reservation">RRSYS: Confirm Reservation</string>
    <string name="title_activity_reservation_receipt">RRSYS: Reservation Receipt</string>
    <string name="restaurant_reservation_system">Restaurant Reservation System</string>

    <string name="create">Create a reservation</string>
    <string name="update">Update a reservation</string>
    <string name="review">Review a reservation</string>
    <string name="view_menu">View Menu </string>
    <string name="check_availability">Check availability</string>

    <string name="reservation_thank_you">Thank you for making a reservation with us!</string>
    <string name="reservation_code_message">Here is your reservation code to be presented upon arrival: </string>
    <string name="enter_reservation_info_msg">Enter the reservation code for the reservation you wish to review: </string>
    <string name="enter_reservation_info_msg_update">Enter the reservation code for the reservation you wish to update: </string>
    <string name="confirmation_instructions">Press RETURN to go back to the main menu or press PRE-ORDER to pre-order food for your reservation</string>
    <string name="add_item_to_order">Add item to order?</string>
    <string name="remove_item_from_order">Remove item from order?</string>
    <string name="customize_order">Special instructions: </string>
    <string name="confirm_order">Confirm order?</string>

    <string name="quantity">Quantity: </string>
    <string name="number_of_people">Number of people: </string>
    <string name="pick_date">Date: </string>
    <string name="pick_time">Arrival: </string>
    <string name="pick_time2">Departure: </string>
    <string name="time">Time: </string>
    <string name="view_order">View Order</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="returnToMain">Return</string>
    <string name="preOrder">Pre-order</string>
    <string name="length_of_stay">Length of stay: </string>
    <string name="reservation_details">Reservation details: </string>
    <string name="order_details">Order details: </string>
    <string name="reservation_updates">Updated reservation details: </string>
    <string name="reservation_code">Reservation code: </string>
    <string name="cancelReservation">Cancel reservation</string>
    <string name="name">Name: </string>
    <string name="first_name">First name: </string>
    <string name="last_name">Last name: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="change_reservation">CHANGE THE RESERVATION</string>

    <string name="phone_number_hint">999-999-9999</string>
    <string name="date_hint">MM/dd/yyyy</string>
    <string name="enter">Enter</string>

    <string name="fatalError">Fatal Error</string>
    <string name="warning">Warning</string>
</resources>