<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="comp3350.rrsys.presentation.ReceiptReservationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textThankYouMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_thank_you"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textReservationCodeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/reservation_code_message"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_below="@+id/textThankYouMsg"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textReservationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/textReservationCodeMsg"
            android:layout_marginTop="20dp"
            android:text="123456"
            android:textAlignment="center"
            android:textSize="40sp" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:id="@+id/textReservationDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_details"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_columnSpan="2"/>

        <TextView
            android:id="@+id/textDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textDateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*date info*"
            android:layout_marginStart="25dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*time info*"
            android:layout_marginStart="25dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textNumberOfPeopleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_people"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textNumberOfPeopleInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*# people*"
            android:layout_marginStart="25dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

    </GridLayout>

    <TextView
        android:id="@+id/confirmationInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirmation_instructions"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_columnSpan="2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/returnToMain"
            android:onClick="buttonHomeOnClick" />

        <Button
            android:id="@+id/buttonPreOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/preOrder"
            android:onClick="buttonPreOrderOnClick" />
    </RelativeLayout>

</LinearLayout>