<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="comp3350.rrsys.presentation.CreateConfirmReservationActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:id="@+id/textReservationDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_details"
            android:textSize="22dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_columnSpan="2" />

        <TextView
            android:id="@+id/textDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textDateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*date info*"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/textStartTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textStartTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*start time info*"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/textEndTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time2"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textEndTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*end time info*"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textNumberOfPeopleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_people"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textNumberOfPeopleInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*# people*"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:id="@+id/separator"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_columnSpan="2" />

        <TextView
            android:id="@+id/textFirstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textLastNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textCustomerPhoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="999-999-9999"
            android:layout_marginTop="20dp" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginStart="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:onClick="buttonBackOnClick"/>

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:onClick="buttonConfirmOnClick"/>
    </RelativeLayout>

</LinearLayout>