<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="5"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:onClick="buttonDoneOnClick"
        android:layout_columnSpan="2"/>

    <TextView
        android:id="@+id/textReservationDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/reservation_details"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_columnSpan="2"/>

    <TextView
        android:id="@+id/textDateLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/pick_date"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textDateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*date info*"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/textTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textTimeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*time info*"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/textNumberOfPeopleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textNumberOfPeopleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*# people*"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/textReservationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_code"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textReservationCodeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*reservation code*"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expandListView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_columnSpan="2">
    </ExpandableListView>

</GridLayout>