<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textReservationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_updates"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/textReservationDetails"
        app:layout_constraintTop_toTopOf="@+id/textReservationDetails"/>

    <TextView
        android:id="@+id/textDateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*date info*"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/textDateLabel"
        app:layout_constraintTop_toTopOf="@+id/textDateLabel"/>


    <TextView
        android:id="@+id/textTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/textReservationDetails"
        app:layout_constraintTop_toTopOf="@+id/textDateLabel"/>

    <TextView
        android:id="@+id/textTimeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*time info*"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/textTimeLabel"
        app:layout_constraintTop_toTopOf="@+id/textTimeLabel"/>

    <TextView
        android:id="@+id/textNumberOfPeopleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/textReservationDetails"
        app:layout_constraintTop_toTopOf="@+id/textTimeLabel"/>

    <TextView
        android:id="@+id/textNumberOfPeopleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*# people*"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/textNumberOfPeopleLabel"
        app:layout_constraintTop_toTopOf="@+id/textNumberOfPeopleLabel"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:onClick="buttonBackOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNumberOfPeopleLabel"/>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:onClick="buttonConfirmOnClick"
        app:layout_constraintTop_toBottomOf="@id/textNumberOfPeopleLabel"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>